Add emoji and java to code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div class="selections">
+        <button class="selection" data-selection="rock">🪨</button>
+        <button class="selection" data-selection="paper">📝</button>
+        <button class="selection" data-selection="scissors">✂️</button>
+    </div>
+    <div class="results">
+        <div>You
+            <span class="result-score" data-computer-score>0</span>
+        </div>
+        <div>Computer
+            <span class="result-score" data-computer-score>0</span>
+        </div>
+        <div class="result-selection winner"></div>
+        <div class="result-selection"></div>
+    </div>
 
 <script src="java.js"></script>
 </body>
