--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- NICE RPS! 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +15,10 @@
         <button class="selection" data-selection="scissors">✂️</button>
     </div>
     <div class="results">
-        <div>You
+        <div> You
             <span class="result-score" data-computer-score>0</span>
         </div>
-        <div>Computer
+        <div data-final-column>Computer
             <span class="result-score" data-computer-score>0</span>
         </div>
         <div class="result-selection winner"></div>
@@ -25,5 +26,28 @@
     </div>
 
 <script src="java.js"></script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Computer Choice: <span id="computerChoice"></span></h1>
+    <h1>Your Choice: <span id="userChoice"></span></h1>
+    <h1>Results: <span id="result"></span></h1>
+
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+
+    <script src="java.js"></script>
 </body>
 </html>
